--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,14 @@
             <version>2.8.5</version>
         </dependency>
         
+        <!-- PDF Generation -->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext-core</artifactId>
+            <version>8.0.5</version>
+            <type>pom</type>
+        </dependency>
+        
         <!-- Utilities -->
         <dependency>
             <groupId>org.projectlombok</groupId>
