--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.application.name=queenscorner
 # =============================================
 # DATABASE MYSQL
 # =============================================
-spring.datasource.url=jdbc:mysql://localhost:3306/queens_corner_db
+spring.datasource.url=jdbc:mysql://localhost:3306/queens_corner_prod_v2
 spring.datasource.username=root
 spring.datasource.password=3856074
 
