chore: Cleanup project directories and update .gitignore
- Removed obsolete migration scripts (migrate_negocios.sql, migrate_negocios_v2.sql, test_data.sql)
  These have been replaced by Flyway migrations in src/main/resources/db/migration/
- Removed logs/queenscorner-app.log (auto-generated at runtime)
- Removed target/ directory (auto-generated by Maven)
- Removed queenscorner-frontend/dist/ and .angular/ (auto-generated by npm build)
- Updated .gitignore to exclude:
  * Frontend build artifacts (dist/, node_modules/, .angular/)
  * Log files (logs/, *.log)
  * Temporary scripts
  * Environment files
  * OS-specific files
- Ensures clean repository without build artifacts and generated files

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,26 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+# Logs
+logs/
+*.log
+npm-debug.log*
+
+# Frontend
+queenscorner-frontend/dist/
+queenscorner-frontend/node_modules/
+queenscorner-frontend/.angular/
+
+# Temporary scripts (use src/main/resources/db/migration/ for Flyway)
+scripts/migrate_*.sql
+scripts/test_*.sql
+scripts/temp/
+
+# Build artifacts
+/node_modules/
+.DS_Store
+dist/
+
 ### STS ###
 .apt_generated
 .classpath
@@ -31,3 +51,12 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# OS
+.DS_Store
+Thumbs.db
