feat: agregar anotaciones Swagger a controllers y mejorar generación de PDFs de facturas
- Actualizar SwaggerConfig con seguridad JWT y licencia
- Agregar anotaciones @Operation, @Parameter y @ApiResponses a ClienteController
- Agregar anotaciones @Operation, @Parameter y @ApiResponses a CotizacionController
- Agregar anotaciones @Operation, @Parameter y @ApiResponses a FacturaController
- Agregar anotaciones @Operation, @Parameter y @ApiResponses a NegocioController
- Agregar @NonNull en JwtAuthenticationFilter
- Mejorar generación de PDF de facturas con detalles completos
- Actualizar FacturaServiceImpl para usar PdfAsyncService
- Agregar dependencies de Flyway en pom.xml
- Simplificar FileUtils removiendo métodos no utilizados
- Actualizar application.properties con configuración de Flyway
- Actualizar V001__Initial_Schema.sql con esquema completo
- Agregar V005__Clean_All_Data.sql para limpiar base de datos
- Generar PDFs de prueba de cotizaciones

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,12 +12,16 @@ spring.datasource.username=root
 spring.datasource.password=3856074
 
 # =============================================
+# FLYWAY CONFIGURATION
+# =============================================
+spring.flyway.enabled=false
+
+# =============================================
 # JPA CONFIGURATION
 # =============================================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # =============================================
 # CACHE CONFIGURATION (Caffeine)
