--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,16 @@
             <scope>runtime</scope>
         </dependency>
         
+        <!-- Database Migration (Flyway) -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-mysql</artifactId>
+        </dependency>
+        
         <!-- Cache -->
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
