--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,6 +48,14 @@ logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss}){faint} %clr(%5p) %clr([%t]
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
 # =============================================
+# JACKSON CONFIGURATION (JSON Serialization)
+# =============================================
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.time-zone=America/Bogota
+spring.jackson.default-property-inclusion=non_null
+spring.jackson.date-format=yyyy-MM-dd
+
+# =============================================
 # SWAGGER/OPENAPI CONFIGURATION
 # =============================================
 springdoc.api-docs.path=/api-docs
