Fix: Resolver error 500 en endpoint listarPorNegocio - agregar caché facturas_negocio y remover @Cacheable inconsistente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,6 +44,9 @@ spring.task.execution.thread-name-prefix=queens-async-
 logging.file.name=logs/queenscorner-app.log
 logging.level.root=INFO
 logging.level.com.uptc.queenscorner=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate=DEBUG
 logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss}){faint} %clr(%5p) %clr([%t]){cyan} %clr(%c){yellow} - %m%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
