--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,12 +14,15 @@ spring.datasource.password=3856074
 # =============================================
 # FLYWAY CONFIGURATION
 # =============================================
-spring.flyway.enabled=false
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+spring.flyway.out-of-order=false
 
 # =============================================
 # JPA CONFIGURATION
 # =============================================
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -27,7 +30,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # CACHE CONFIGURATION (Caffeine)
 # =============================================
 spring.cache.type=caffeine
-spring.cache.cache-names=clientes,cotizaciones,negocios,catalogos
+spring.cache.cache-names=clientes,cotizaciones,negocios,facturas,facturas_negocio,catalogos
 spring.cache.caffeine.spec=maximumSize=500,expireAfterWrite=10m
 
 # =============================================
