Fix: Deshabilitar Flyway completamente para evitar conflictos con schema

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.datasource.password=3856074
 # FLYWAY CONFIGURATION
 # =============================================
 spring.flyway.enabled=false
+spring.flyway.baselineOnMigrate=true
 
 # =============================================
 # JPA CONFIGURATION
