--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,7 @@ spring.flyway.enabled=false
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 spring.flyway.out-of-order=false
+spring.flyway.validate-on-migrate=false
 
 # =============================================
 # JPA CONFIGURATION
